<resources>
    <string name="app_name" translatable="false">E-Culture Tool</string>
    <string name="welcome_login_button">Login</string>
    <string name="welcome_sign_up_button">Sign up</string>
    <string name="welcome_log_as_guest_text_view">Continue as Guest…</string>
    <string name="nav_paths">Paths</string>
    <string name="nav_places">Places</string>
    <string name="nav_user">Profile</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="filter_description">Select a filter</string>
    <string name="list_paths_no_results">No results found</string>
    <string name="list_paths_no_results_description">No paths has been found</string>
    <string name="apply_filter">APPLY FILTERS</string>
    <string name="museum">Museum</string>
    <string name="welcome">Welcome</string>
    <string name="new_account">Create a new account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="options_user">Account details</string>
    <string name="options_logout">Logout</string>
    <string name="rationale_location_permission_title">We need your permission to access location</string>
    <string name="rationale_location_permission_message">You will now be asked to consent location permission to show you relevant culture places in your area</string>
    <string name="rationale_cancel_button">No, thanks</string>
    <string name="rationale_ok_button">Got it!</string>
    <string name="rationale_read_external_storage_title">We need your permission to access external storage</string>
    <string name="rationale_read_external_storage_message">You will now be asked to consent external storage permission to allow you pick photo of your place</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Already have an account? Sign In</string>
    <string name="surname">Surname</string>
    <string name="curator">Are you a curator?</string>
    <string name="why_sign_up">Why should I Sign Up?</string>
    <string name="invalid_name">Please enter a name between 3 and 15 characters long, with the first letter capitalized and without spaces</string>
    <string name="invalid_surname">Please enter a surname between 3 and 15 characters long,  with the first letter capitalized and with at most one space</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Please enter a password between 8 and 20 characters, without spaces, including at least 1 digit, upper and lower case letter and special character</string>
    <string name="invalid_confirm_password">Please be careful,  the passwords don\'t match</string>
    <string name="recover_password">Password recovered? Sign In</string>
    <string name="send">Send New Password</string>
    <string name="error_dialog_title">An error occurred</string>
    <string name="unexpected_exception_dialog">Something went wrong</string>
    <string name="ok">OK</string>
    <string name="information_paths">By registering we will save all your paths so that you can retrieve them from any device.</string>
    <string name="information_curator">Moreover, if you are a curator of one or more places you can manage them by entering, in addition to all the information, even the paths visible to all users.</string>
    <string name="information">Information</string>
    <string name="details">Details</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_your_information">Change Your Information</string>
    <string name="manage_places">Manage Places</string>
    <string name="logout">Logout</string>
    <string name="name_subject_label">Name:</string>
    <string name="surname_subject_label">Surname:</string>
    <string name="email_subject_label">Email:</string>
    <string name="new_password_subject_label">New Password</string>
    <string name="confirm_password_subject_label">Confirm Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="delete_your_account">Delete Your Account</string>
    <string name="manage_your_places">Manage Your Places</string>
    <string name="change_password">Change Password</string>
    <string name="do_not_change_anymore">Don\'t Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_save_visitor_paths_to_account">Sure</string>
    <string name="cancel_save_visitor_paths_to_account">Don\'t save</string>
    <string name="title_activity_manage_places" translatable="false">ManagePlacesActivity</string>
    <string name="recover">Recover Password</string>
    <string name="create_new_place">Place Information</string>
    <string name="paths_screen_title">Paths</string>
    <string name="places_screen_title">Places</string>
    <string name="welcome_screen_title">Welcome</string>
    <string name="profile_details_screen_title">Profile</string>
    <string name="edit_profile_screen_title">Edit</string>
    <string name="login_screen_title">Login</string>
    <string name="signup_screen_title">Register</string>
    <string name="signup_information_screen_title">Why to Sign Up?</string>
    <string name="forget_password_screen_title">Recover Password</string>
    <string name="user_screen_title">User</string>
    <string name="show_places_screen_title">Your Places</string>
    <string name="create_place_screen_title">Create Place</string>
    <string name="create">Create</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="pick_image">Pick image from gallery</string>
    <string name="place_image">Place image</string>
    <string name="invalid_place_name">Please enter a name between 2 and 25 characters</string>
    <string name="invalid_place_address">Please enter an address between 5 and 50 characters</string>
    <string name="invalid_place_description">Please enter a description between 10 and 100 characters</string>
    <string name="pick_place_image">Please pick a representative image of your place from your gallery</string>
    <string name="pick_object_image">Please pick a representative image of your object from your gallery</string>
    <string name="show_place_default_paths">Place Paths</string>
    <string name="create_path_screen_title">Create Path</string>
    <string name="btn_add_path">Create a new path</string>
    <string name="show_my_paths">Paths</string>
    <string name="manage_place_screen_title">Manage Place</string>
    <string name="edit_place_information">Edit place information</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="warning_delete_account">Are you sure you want to delete your account?</string>
    <string name="warning_exit_account">Are you sure you want to exit your account?</string>
    <string name="warning_delete_place">Are you sure you want to delete your place?</string>
    <string name="warning_delete_zone">Are you sure you want to delete this zone?</string>
    <string name="warning_delete_object">Are you sure you want to delete this object?</string>
    <string name="warning_delete_path">Are you sure you want to delete your path?</string>
    <string name="warning_discard_path_changes">Are you sure to discard all changes?</string>
    <string name="save_to_account_dialog_title">Import to your account</string>
    <string name="warning_save_visitor_paths_to_account">By importing paths to your account, you will be able to access them everywhere.\nIf you don\'t import them now, they will not be visible until you logout.\nDo you want to import your paths on your account?</string>
    <string name="paths_section">Go to paths section</string>
    <string name="not_found_text">Sorry, not found</string>
    <string name="not_found_text_explanation">The required results were not found. They may have been eliminated or never existed</string>
    <string name="edit_place_screen_title">Edit Place</string>
    <string name="place_details">Place Details</string>
    <string name="change_place_information">Change Place Information</string>
    <string name="delete_your_place">Delete Your Place</string>
    <string name="scan_qrcode">Scan QR Code</string>
    <string name="create_new_artifact">Create new object</string>
    <string name="zones">Zones</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="invalid_zone">Please enter a zone name between 2 and 25 characters</string>
    <string name="invalid_path">Please enter a path name between 2 and 25 characters</string>
    <string name="name">Name</string>
    <string name="object_image">Object Image</string>
    <string name="book">Book</string>
    <string name="path_name">Path name</string>
    <string name="date_change">Date of last modification</string>
    <string name="_0" translatable="false">0</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="search_by_path_name">Search by path name</string>
    <string name="search_by_place_name">Search by place name</string>
    <string name="search_by_address_place">Search by place address</string>
    <string name="search_for_objects_in_the_path">Search for objects name in the path</string>
    <string name="select_filters">Select Filters</string>
    <string name="place_name_and_address">Place name and place address</string>
    <string name="create_object_title_screen">Create Object</string>
    <string name="object_information">Object Information</string>
    <string name="zone_not_selected">Please select a zone</string>
    <string name="object_details">Object Details</string>
    <string name="change_object_information">Change Object Information</string>
    <string name="delete_your_object">Delete This Object</string>
    <string name="edit_object_screen_title">Edit Object</string>
    <string name="scan_qrcode_prompt">For flash use volume UP key</string>
    <string name="scan_qrcode_error">You did not scan anything</string>
    <string name="qrcode_download_success">QR Code downloaded</string>
    <string name="qrcode_download_error">Error during download</string>
    <string name="save_path">Save path</string>
    <string name="path_name_here">Path name here</string>
    <string name="err_no_internet_connection">You must be connected to Internet to perform this action</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="path_error">You have to insert at least one object</string>
    <string name="show_path_screen_title">Show Path</string>
    <string name="path_download_success">Path downloaded</string>
    <string name="path_download_error">Error during download</string>
    <string name="edit_path_screen_title">Edit Path</string>
    <string name="arrow" translatable="false">arrow</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="edit_not_allowed">Can\'t edit</string>
    <plurals name="list_paths_results">
        <item quantity="one">Result: 1</item>
        <item quantity="other">Results: %d</item>
    </plurals>
    <string name="path_text_message">Hey, I recently got my eye on %1$s, which is here: %2$s.\nTake a look at my path, %3$s:\n%4$s\nThis path was created with ECultureTool, download the app from your store now!</string>
    <string name="maps_coordinates_link" translatable="false">https://www.google.com/maps/place/%1$s,%2$s</string>
    <string name="objects_list_text_message">%1$d. %2$s, %3$s, located in %4$s\n</string>
</resources>