<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imgMuseum"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:contentDescription="@string/museum"
        android:src="@drawable/museum"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome"
        android:textColor="#403f3f"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textColor="#403f3f"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>