<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imgMuseum"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:contentDescription="@string/museum"
        android:src="@drawable/museum"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#403f3f"
        android:textSize="36sp"
        android:textStyle="bold"
        android:letterSpacing="0.03"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/circle"
        android:textColor="#ffc791"
        android:textSize="16sp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="@string/email" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/circle"
        android:textColor="#ffc791"
        android:textSize="16sp"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="@string/password" />

    <TextView
        android:id="@+id/btnForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/forget_password"
        android:textColor="#403f3f"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="#403f3f"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>