<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/placesFragment">
    <fragment
        android:id="@+id/pathsFragment"
        android:name="com.apuliacreativehub.eculturetool.ui.paths.PathsFragment"
        android:label="@string/paths_screen_title"
        tools:layout="@layout/fragment_paths" />
    <fragment
        android:id="@+id/placesFragment"
        android:name="com.apuliacreativehub.eculturetool.ui.places.PlacesFragment"
        android:label="@string/places_screen_title"
        tools:layout="@layout/fragment_places" />
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.apuliacreativehub.eculturetool.ui.user.WelcomeFragment"
        android:label="@string/welcome_screen_title"
        tools:layout="@layout/fragment_welcome" />
    <fragment
        android:id="@+id/profileDetailsFragment"
        android:name="com.apuliacreativehub.eculturetool.ui.user.ProfileDetailsFragment"
        android:label="@string/profile_details_screen_title"
        tools:layout="@layout/fragment_profile_details">
        <action
            android:id="@+id/action_profileDetailsFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/userFragment"
        android:name="com.apuliacreativehub.eculturetool.ui.user.UserFragment"
        android:label="fragment_user"
        tools:layout="@layout/fragment_user">
        <action
            android:id="@+id/action_userFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <action
            android:id="@+id/action_userFragment_to_profileDetailsFragment"
            app:destination="@id/profileDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.apuliacreativehub.eculturetool.ui.user.EditProfileFragment"
        android:label="@string/edit_profile_screen_title">
        <action
            android:id="@+id/action_editProfileFragment_to_profileDetailsFragment"
            app:destination="@id/profileDetailsFragment" />
    </fragment>

</navigation>