<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imgMuseum"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/museum"
        android:scaleType="centerCrop"
        android:src="@drawable/museum"
        app:layout_constraintBottom_toTopOf="@+id/lytForgetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/lytForgetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:letterSpacing="0.03"
            android:text="@string/password"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:text="@string/recover_password"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/send"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>