<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.places.CreatePlaceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPlaceToolbar">

        <TextView
            android:id="@+id/txtCreatePlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:letterSpacing="0.03"
            android:text="@string/create_new_place"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgPlace"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:src="@mipmap/outline_add_photo_alternate_black_36"
            android:contentDescription="@string/place_image"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:autofillHints="@string/address"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="320dp"
            android:layout_height="144dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:autofillHints="@string/description"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textLongMessage|textMultiLine"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnCreatePlace"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/create"
            android:textAllCaps="true" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createPlaceToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>